--- a/templates/index h.html
+++ b/templates/index h.html
@@ -201,7 +201,9 @@ color: black;
                         <h2 class="section-title">Let’s discuss about website</h2>
                     </div>
                     <div class="left-text">
-                        <p>Here i will provide you every thing needed.</p>
+                        <p>Here i will provide you every thing needed.
+                          <a href="/blog/kali-install">Lunix</a>                     
+                       </p>
                     </div>
                 </div>
             </div>
@@ -223,12 +225,12 @@ color: black;
                         <h2 class="section-title">We can help you to grow your </h2>
                     </div>
                     <div class="left-text">
-                        <p>kuch to log khenge logo ka kam hai khena.</p>
+                        <p>We will provide you all the tutorials fo your growth and you didn't find your answer please let us know in contact us form thankyou.</p>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
                 <div class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <img src="assets/images/right-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    
                 </div>
             </div>
         </div>
@@ -246,7 +248,7 @@ color: black;
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">What do they say?</h2>
+                        <h2 class="section-title">The godlen words of coding</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
@@ -274,7 +276,7 @@ color: black;
                             </div>
                             <div class="team-info">
                                 <h3 class="user-name">Mohit</h3>
-                                <span>Website Manager</span>
+                                <span></span>
                             </div>
                         </div>
                     </div>
@@ -441,7 +443,7 @@ color: black;
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                        <p>yaha per mutna mana hai.</p>
+                        <p>Let us know about what you are thinking about.</p>
                     </div>
                 </div>
             </div>
@@ -453,7 +455,9 @@ color: black;
                     <h5 class="margin-bottom-30">Keep in touch</h5>
                     <div class="contact-text">
                         <p>
-                        <br></p>
+                          To get hacking related tutorials please mail <strong>sudo dark</strong> and you will receive the dark side link in your mailbox 
+                        </p>
+                      <br>
                         <p> Thank you.</p>
                     </div>
                 </div>
