--- a/templates/ins-kali.html
+++ b/templates/ins-kali.html
@@ -143,7 +143,7 @@ color: black;
                 <div class="row">
                     <div class="offset-lg-3 col-lg-6">
                         <div class="info" style="margin-top:5%;">
-                            <h1>Tutorials</h1>
+                            <h1>Kali Linux</h1>
                             <p></p>
                         </div>
                     </div>
