--- a/templates/index h.html
+++ b/templates/index h.html
@@ -104,13 +104,11 @@ color: black;
                         </a>
                         <div class="topnav">
                         <div id="myLinks">
-                          <a href="#welcome" >Home</a>
-                          <a href="#features">About</a>
+                          <a href="/" >Home</a>
+                          
                           <a href="/blog">Blogs</a>
-                          <a href="#work-process">Tutorials</a>
+                          
 
-
-                        <a href="#contact-us">Contact Us</a>
                         </div>
                       </div>
                          <!--***** Menu End ***** -->
@@ -153,7 +151,7 @@ color: black;
                                     <i><img src="assets/images/featured-item-01.png" alt=""></i>
                                 </div>
                                 <h5 class="features-title">Modern Strategy</h5>
-                                <p>Modern problems need Morden solutions</p>
+                                <p>Modern problems needs Morden solutions</p>
                             </div>
                         </div>
                         <!-- ***** Features Small Item End ***** -->
@@ -201,8 +199,8 @@ color: black;
                         <h2 class="section-title">Let’s discuss about website</h2>
                     </div>
                     <div class="left-text">
-                        <p>Here i will provide you every thing needed.
-                          <a href="/blog/kali-install">Lunix</a>                     
+                        <p>Here we will provide you every thing needed for coding.
+                          <a href="/blog/kali-install">  get Lunix</a>                     
                        </p>
                     </div>
                 </div>
@@ -225,7 +223,7 @@ color: black;
                         <h2 class="section-title">We can help you to grow your </h2>
                     </div>
                     <div class="left-text">
-                        <p>We will provide you all the tutorials fo your growth and you didn't find your answer please let us know in contact us form thankyou.</p>
+                        <p>We will provide you all the tutorials for your growth and if you didn't find your answer please let us know in contact us form thankyou.</p>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
@@ -248,7 +246,7 @@ color: black;
             <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
-                        <h2 class="section-title">The godlen words of coding</h2>
+                        <h2 class="section-title">The golden words of coding</h2>
                     </div>
                 </div>
                 <div class="offset-lg-3 col-lg-6">
@@ -270,7 +268,7 @@ color: black;
                     <div class="team-item">
                         <div class="team-content">
                             <i><img src="assets/images/testimonial-icon.png" alt=""></i>
-                            <p>If you code works,Then don't touch it.</p>
+                            <p>If your code works,Then don't touch it.</p>
                             <div class="user-image">
                                 <img src="http://placehold.it/60x60" alt="">
                             </div>
