--- a/templates/index h.html
+++ b/templates/index h.html
@@ -248,7 +248,7 @@ color: black;
                     <div class="center-heading">
                         <h2 class="section-title">The golden words of coding</h2>
                     </div>
-                </div>
+                </div>https://www.google.com/
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
                         <p>.</p>
@@ -464,7 +464,7 @@ color: black;
                 <!-- ***** Contact Form Start ***** -->
                 <div class="col-lg-8 col-md-6 col-sm-12">
                     <div class="contact-form">
-                        <form id="contact" action="" method="get">
+                        <form id="contact" action="/done" method="post">
                           <div class="row">
                             <div class="col-lg-6 col-md-12 col-sm-12">
                               <fieldset>
