--- a/templates/blog.html
+++ b/templates/blog.html
@@ -91,12 +91,9 @@ color: black;
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li><a href="/" >Home</a></li>
-                            <li><a href="#features">About</a></li>
+                            
                             <li><a href="/blog">Blogs</a></li>
-                            <li><a href="#work-process">Tutorials</a></li>
-
-
-                            <li><a href="#contact-us">Contact Us</a></li>
+                        
                         </ul>
 
                         <a href="javascript:void(0);" onclick="myFunction()"  class='icon menu-trigger'>
@@ -104,13 +101,13 @@ color: black;
                         </a>
                         <div class="topnav">
                         <div id="myLinks">
-                          <a href="#welcome" >Home</a>
-                          <a href="#features">About</a>
+                          <a href="/" >Home</a>
+                        
                           <a href="/blog">Blogs</a>
-                          <a href="#work-process">Tutorials</a>
+                         
 
 
-                        <a href="#contact-us">Contact Us</a>
+                        
                         </div>
                       </div>
                          <!--***** Menu End ***** -->
@@ -166,10 +163,10 @@ color: black;
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
-                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>Hack SmartPhone</strong>
-                            <span>Updating with video.</span>
+                        <a href="/blog/phishing" class="mini-box">
+                            
+                            <strong>Phishing</strong>
+                            <span>Tutorial with video.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
@@ -371,7 +368,7 @@ color: black;
                 </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a> <a href="https://www.instagram.com/mohitkhyalia_mk/" style="margin-left:4%;"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.instagram.com/mohitkhyalia_mk/" style="margin-left:4%;"><i class="fa fa-instagram"></i></a></li>
                       <p class="copyright">© 2013–2021 · Made with ❤️ in India</p>
                     </div>
                 </div>
