--- a/templates/index h.html
+++ b/templates/index h.html
@@ -220,10 +220,10 @@ color: black;
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">We can help you to grow your </h2>
+                        <h2 class="section-title">We can help you to grow your skills</h2>
                     </div>
                     <div class="left-text">
-                        <p>We will provide you all the tutorials for your growth and if you didn't find your answer please let us know in contact us form thankyou.</p>
+                        <p>We will provide you all the tutorials for your growth and if you don't find your answer please let us know in contact us form thankyou.</p>
                     </div>
                 </div>
                 <div class="col-lg-1"></div>
@@ -248,7 +248,7 @@ color: black;
                     <div class="center-heading">
                         <h2 class="section-title">The golden words of coding</h2>
                     </div>
-                </div>https://www.google.com/
+                </div>
                 <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
                         <p>.</p>
