--- a/templates/blog.html
+++ b/templates/blog.html
@@ -169,11 +169,18 @@ color: black;
                             <span>Tutorial with video.</span>
                         </a>
                     </div>
-                    <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                  <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                        <a href="" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>Free gamil accounts</strong>
-                            <span>Updating with new accounts with pwd.</span>
+                            <strong>Python AI</strong>
+                            <span>Coming Soon...</span>
+                        </a>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                        <a href="/blog/tool-x" class="mini-box">
+                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <strong>Tool-x</strong>
+                            <span>Full video tutorial and termux cmds.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
