--- a/templates/index h.html
+++ b/templates/index h.html
@@ -88,15 +88,10 @@ color: black;
                         </a>
                          <!--***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
-                        <ul class="nav">
-                            <li><a href="/" >Home</a></li>
-                            <li><a href="#features">About</a></li>
-                            <li><a href="/blog">Blogs</a></li>
-                            <li><a href="#work-process">Tutorials</a></li>
 
 
-                            <li><a href="#contact-us">Contact Us</a></li>
-                        </ul>
+                      
+                     
 
                         <a href="javascript:void(0);" onclick="myFunction()"  class='icon menu-trigger'>
                             <span>Menu</span>
@@ -190,7 +185,7 @@ color: black;
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 align-self-center" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="{% static 'assets/images/left-image.png' %}" class="rounded img-fluid d-block mx-auto" alt="App">
+                   
                 </div>
                 <div class="col-lg-1"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix">
@@ -496,13 +491,13 @@ color: black;
             <div class="">
               <div class="offset-lg-3 col-lg-6">
                   <div class="center-text">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a><a href="https://www.instagram.com/mohitkhyalia_mk/" style="margin-left:4%;"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.instagram.com/mohitkhyalia_mk/" style="margin-left:4%;"><i class="fa fa-instagram"></i></a></li>
                     <p class="copyright">© 2013–2021 · Made with ❤️ in India</p>
                   </div>
               </div>
 
 
-              <img class='logo-mk' src="{% static 'images/logo.jpg' %}" style="width: 69%;margin-left:13%;margin-top:6%;" alt="Mohit Khyalia"/>
+              <a href='/' ><img class='logo-mk' src="{% static 'images/logo.jpg' %}" style="width: 69%;margin-left:13%;margin-top:6%;" alt="Mohit Khyalia"/></a>
             </div>
 
         </div>
