--- a/templates/index h.html
+++ b/templates/index h.html
@@ -106,6 +106,7 @@ color: black;
                         </div>
                       </div>
                          <!--***** Menu End ***** -->
+                      <a href='/logout'><i class="fas fa-sign-out-alt"></i></a>
                     </nav>
                 </div>
             </div>
