--- a/templates/blog.html
+++ b/templates/blog.html
@@ -111,6 +111,7 @@ color: black;
                         </div>
                       </div>
                          <!--***** Menu End ***** -->
+                      <a href='/logout'><i class="fas fa-sign-out-alt"></i></a>
                     </nav>
                 </div>
             </div>
@@ -402,7 +403,7 @@ color: black;
               </div >
             
 
-              <img class='logo-mk' src="{% static 'images/logo.jpg' %}" style="width: 69%;margin-left:13%;margin-top:6%;" alt="Mohit Khyalia"/>
+             <a href='/' <img class='logo-mk' src="{% static 'images/logo.jpg' %}" style="width: 69%;margin-left:13%;margin-top:6%;" alt="Mohit Khyalia"/></a>
              
             </div>
 
